tests/snapshots/examples_fixtures/type_system__failing__75_hm_if_non_bool_condition_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx:2:8
  |
2 |     if 1 {
  |        ^
  |        - this expression has type `Int`

  |        - if condition is known at compile time

Note:
  expected type: Bool
  found type: Int

Help:
  Booleans are not numeric in Flux. Use `true` or `false` here.
  use a Bool expression, or make the condition/guard explicitly boolean
== stdout ==
<not executed>
